--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
       <meta charset="UTF-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <meta name="title" content="William Kenzie">
+      <meta name="description" content="Security and Privacy writer by day - React web app designer by night 🍵">
+      <meta name="keywords" content="Javascript Developer, Python Developer, React Developer, Rust Developer, Security Analyst, Privacy Analyst, Privacy, Security, Developer">
+      <meta name="robots" content="index, follow">
+      <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+      <meta name="language" content="English">
       <title>William Kenzie</title>
       <link rel="stylesheet" href="assets/style.css">
       </link>
