I am not a web desinger
I promise

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
          </g>
       </svg>
       <section>
-         <h2>Web Desinger</h2>
+         <h2>Web Designer</h2>
          <p>An ideal web stack consists of React with Next.js, blended with some beautiful Material components, finished with a Supabase backend for simple web app development, or, if you fancy, direct integration to your favorite social media website - where your preferred posts can be displayed on your site in a professional and elegant matter.</p>
       </section>
       <section class="bubble ">
